# AgentMem

./: .digest_metaclaw_state.json  .dockerignore  .env.example  .gitignore  BENCHMARK_RESULTS.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  QUICKSTART_v1.2.md  README.md  TEST_MIGRATION_COMPLETE.md  TEST_MIGRATION_SUMMARY.md  TEST_RESULTS.md  agentmem.sh  agentmem_stdio.py  ai.agent.memory.plist  api_compat.py  backfill.py  bench-f1.py  bench-start.sh  capability.py  compact.py  connect.py  dev.sh  digest-claudecode.py  digest-metaclaw.py  digest-openclaw.py  docker-compose.yml  embedder.py  exceptions.py  extractor.py  graph.py  heat.py  log_sse.py  main.py  mcp_server.py  migrate_main.py  persona.py  prune_procedures.py  pyproject.toml  pytest.ini  (+9 more)
adapters/: __init__.py  autogen.py  base.py  claude.py  crewai.py  langchain.py  langgraph.py
api/: __init__.py  compat.py  state.py
benchmark/: README.md
claude-code/: hooks.json
cli/: agentmem
concurrency/: __init__.py
config/: __init__.py  settings.py
core/: capability.py  embedder.py  extractor.py  graph.py  heat.py  http.py  log_sse.py  persona.py  retrieval_planner.py  scene.py  search.py  store.py  summarizer.py  utils.py
docs/: ARCHITECTURE_DIAGRAMS.md  README.md
hooks/: __init__.py  common.py  notification.py  post_commit.py  post_tool_failure.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  prompt_submit.py  session_end.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py  task_completed.py
lifecycle/: __init__.py  decay_engine.py  merge_strategy.py
plugin/: index.js  package.json  (+1 more)
(+69 files in other folders)
