[project]
name = "agentmem"
version = "0.9.6"
description = "Local persistent memory service for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn>=0.30",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "redis>=5.0",
    "ulid-py>=1.1",
    "numpy>=1.26",
    "aiofiles>=23.0",
    "mcp>=1.0",
]

[tool.uv]
# No extra settings needed — set UV_PROJECT_ENVIRONMENT=./venv in the environment
# to reuse the existing venv/ without re-downloading packages.
