[project]
name = "agentmem"
version = "0.9.7"
description = "Developer's Memory — persistent memory service for AI agents with 6-tier cognitive architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn>=0.30",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "redis>=5.0",
    "ulid-py>=1.1",
    "numpy>=1.26",
    "aiofiles>=23.0",
    "mcp>=1.0",
]

[project.scripts]
agentmem = "cli.agentmem:main"

[tool.uv]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
]
